# 29_HW

./: README.md  manage.py  pyproject.toml
HW_29/: settings.py  urls.py
ads/urls/: ad.py
ads/views/: ad.py  category.py
users/: models.py  urls.py  views.py
